<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luismiguelopes.whowantstobemillionaire.whowantstobemillionaireapp.GamingActivity">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/txtQuestion"
        android:layout_above="@+id/btnOne"
        android:layout_toStartOf="@+id/btnFiftyFifty"
        android:layout_marginBottom="27dp" />

    <Button
        android:background="@drawable/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. "
        android:id="@+id/btnOne"
        android:layout_above="@+id/btnThree"
        android:layout_alignStart="@+id/txtQuestion"
        android:layout_marginBottom="55dp" />

    <Button
        android:background="@drawable/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2. "
        android:id="@+id/btnTwo"
        android:layout_alignTop="@+id/btnOne"
        android:layout_toEndOf="@+id/btnOne"
        android:layout_marginStart="89dp" />

    <Button
        android:background="@drawable/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnThree"
        android:id="@+id/btnThree"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btnOne" />

    <Button
        android:background="@drawable/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4. "
        android:id="@+id/btnFour"
        android:layout_alignTop="@+id/btnThree"
        android:layout_alignStart="@+id/btnTwo" />

    <Button
        android:background="@drawable/my_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPhone"
        android:id="@+id/btnPhone"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btnOne" />

    <Button
        android:background="@drawable/my_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFiftyFifty"
        android:id="@+id/btnFiftyFifty"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@drawable/my_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPublic"
        android:id="@+id/btnPublic"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/btnTwo" />
</RelativeLayout>
